--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -25,22 +25,22 @@
         <!--column-wrap-container -->   
         <div class="column-wrap-container fl-wrap dark-bg">
             <div class="col-wc_dec">
-                <div class="pr-bg pr-bg-white"></div>
+                <!-- <div class="pr-bg pr-bg-white"></div> -->
             </div>
             <div class="col-wc_dec col-wc_dec2">
-                <div class="pr-bg pr-bg-white"></div>
+                <!-- <div class="pr-bg pr-bg-white"></div> -->
             </div>
             <section  class="small-padding article dark-bg">
                 <div class="container">
     
                     <div class="split-sceen-content_title fl-wrap">
-                        <!-- <div class="pr-bg pr-bg-white"></div> -->
+                        <!-- <!-- <div class="pr-bg pr-bg-white"></div> --> -->
                         <h3>
                             Fashion Cyphers</h3>
                     </div>
                     <div class="column-wrap-content fl-wrap">
                         <div class="column-wrap-media fl-wrap">
-                            <div class="pr-bg pr-bg-white"></div>
+                            <!-- <div class="pr-bg pr-bg-white"></div> -->
                             <div class="single-slider-wrap">
                                 <div class="single-slider fl-wrap">
                                     <div class="swiper-container">
@@ -57,7 +57,7 @@
                                    
                                 </div>
                                 <div class="ss-slider-controls">
-                                    <div class="pr-bg pr-bg-white"></div>
+                                    <!-- <div class="pr-bg pr-bg-white"></div> -->
                                     <div class="ss-slider-pagination"></div>
                                     <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                     <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -82,7 +82,7 @@
                         <div class="parallax-header"> <a href="/fashioncyphers">EXPLORE MORE</a> </div>
                     </div>
                     <div class="section-number right_sn">
-                        <div class="pr-bg pr-bg-white"></div>
+                        <!-- <div class="pr-bg pr-bg-white"></div> -->
                     </div>
                 </div>
             </section>
@@ -92,13 +92,13 @@
             <section  class="small-padding article dark-bg">
                 <div class="container">
                     <div class="split-sceen-content_title fl-wrap">
-                        <div class="pr-bg pr-bg-white"></div>
+                        <!-- <div class="pr-bg pr-bg-white"></div> -->
                         <h3>KWETU KWANZA</h3>
                        
                     </div>
                     <div class="column-wrap-content fl-wrap">
                         <div class="column-wrap-media fl-wrap">
-                            <div class="pr-bg pr-bg-white"></div>
+                            <!-- <div class="pr-bg pr-bg-white"></div> -->
                             <div class="single-slider-wrap">
                                 <div class="single-slider fl-wrap">
                                     <div class="swiper-container">
@@ -113,7 +113,7 @@
                                     </div>
                                 </div>
                                 <div class="ss-slider-controls">
-                                    <div class="pr-bg pr-bg-white"></div>
+                                    <!-- <div class="pr-bg pr-bg-white"></div> -->
                                     <div class="ss-slider-pagination"></div>
                                     <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                     <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -139,7 +139,7 @@
                         <div class="parallax-header"> <a href="/kwetukwanza">EXPLORE MORE</a> </div>
                     </div>
                     <div class="section-number right_sn">
-                        <div class="pr-bg pr-bg-white"></div>
+                        <!-- <div class="pr-bg pr-bg-white"></div> -->
                     </div>
                 </div>
             </section>
@@ -149,13 +149,13 @@
             <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
-                            <div class="pr-bg pr-bg-white"></div>
+                            <!-- <div class="pr-bg pr-bg-white"></div> -->
                             <h3>Fashion Workshops</h3>
                             
                         </div>
                         <div class="column-wrap-content fl-wrap">
                             <div class="column-wrap-media fl-wrap">
-                                <div class="pr-bg pr-bg-white"></div>
+                                <!-- <div class="pr-bg pr-bg-white"></div> -->
                                 <div class="single-slider-wrap">
                                     <div class="single-slider fl-wrap">
                                         <div class="swiper-container">
@@ -168,7 +168,7 @@
                                         </div>
                                     </div>
                                     <div class="ss-slider-controls">
-                                        <div class="pr-bg pr-bg-white"></div>
+                                        <!-- <div class="pr-bg pr-bg-white"></div> -->
                                         <div class="ss-slider-pagination"></div>
                                         <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                         <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -188,7 +188,7 @@
                             <div class="parallax-header"> <a href="/workshop">EXPLORE MORE</a> </div>
                         </div>
                         <div class="section-number right_sn">
-                            <div class="pr-bg pr-bg-white"></div>
+                            <!-- <div class="pr-bg pr-bg-white"></div> -->
                         </div>
                     </div>
                 </section>
@@ -198,13 +198,13 @@
             <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
-                            <div class="pr-bg pr-bg-white"></div>
+                            <!-- <div class="pr-bg pr-bg-white"></div> -->
                             <h3>IGC SUSTAINABILITY INNOVATION</h3>
                             
                         </div>
                         <div class="column-wrap-content fl-wrap">
                             <div class="column-wrap-media fl-wrap">
-                                <div class="pr-bg pr-bg-white"></div>
+                                 <!-- <div class="pr-bg pr-bg-white"></div> --> 
                                 <div class="single-slider-wrap">
                                     <div class="single-slider fl-wrap">
                                         <div class="swiper-container">
@@ -217,7 +217,7 @@
                                             
                                 </div>
                                 <div class="ss-slider-controls">
-                                    <div class="pr-bg pr-bg-white"></div>
+                                    <!-- <div class="pr-bg pr-bg-white"></div> -->
                                     <div class="ss-slider-pagination"></div>
                                     <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                     <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -241,7 +241,7 @@
                             <div class="parallax-header"> <a href="/mistakenfabrics">EXPLORE MORE</a> </div>
                         </div>
                         <div class="section-number right_sn">
-                            <div class="pr-bg pr-bg-white"></div>
+                            <!-- <div class="pr-bg pr-bg-white"></div> -->
                         </div>
                     </div>
                 </section>
