--- a/views/home.ejs
+++ b/views/home.ejs
@@ -108,6 +108,27 @@
                                                           "><i class="fal fa-search"></i></a> -->
           <img src="images/home3.png" alt="" />
         </div>
+        <div class="gallery-item" style="height: 367.431px;">
+          <div class="grid-item-holder">
+            <!-- <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+                      class="
+                                                                      fet_pr-carousel-box-media-zoom
+                                                                      popup-image
+                                                                    "><i class="fal fa-search"></i></a> -->
+            <img src="images/home5.png" alt="" />
+          </div>
+        </div>
+        <!-- gallery-item end-->
+        <!-- gallery-item-->
+        <div class="gallery-item" style="height: 367.431px;">
+          <!-- <div class="grid-item-holder">
+                    <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
+                      class="
+                                                                    fet_pr-carousel-box-media-zoom
+                                                                    popup-image
+                                                                  "><i class="fal fa-search"></i></a> -->
+          <img src="images/home6.png" alt="" />
+        </div>
       </div>
       <!-- gallery-item end-->
 
