projects home grid

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -71,6 +71,7 @@
                     frameborder="0"
                     allowfullscreen></iframe>
                     </div>
+                    <div>jhjljghjgkhj kgjgjhgjglkj jgljhkj hlgjhgjh g jh   kjg</div>
                   </div>
                   <!-- gallery-item end-->
                   <!-- gallery-item-->
