--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,84 +60,23 @@
   </div>
 
 
-  <div id="tabs-container" class="fl-wrap">
-    <!-- <div class="tabs-counter">
-                    <span class="tab-name">Mistaken Fabrics</span>
-                    <div class="tc_item">Mistaken Fabrics</div>
-                  </div> -->
-
-    <!-- <div class="tabs-counter">
-                <span>0</span>
-                <div class="tc_item">1</div>
-              </div> -->
-    <!-- <ul class="tabs-menu fl-wrap">
-                <li class="selectedLava">
-                  <a href="#tab-1" data-tabnum="1"><span>01.</span>Munsiko</a>
-                </li>
-              
-              </ul> -->
-    <!-- tab-content-->
-    <div id="tab-1" class="tab-content">
-      <!-- <h3 class="pr-subtitle">SHOW CASE</h3> -->
-      <!-- portfolio start -->
-      <div class="gallery-items
-                      min-pad
-                      lightgallery
-                     two-column
-                      fl-wrap
-                    ">
-        <!-- gallery-item-->
-        <div class="gallery-item" style="height: 400px;">
-          <div class="grid-item-holder">
-            <!-- <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-              class="
-                                                              fet_pr-carousel-box-media-zoom
-                                                              popup-image
-                                                            "><i class="fal fa-search"></i></a> -->
-            <img src="images/home4.png" alt="" />
-          </div>
-        </div>
-        <!-- gallery-item end-->
-        <!-- gallery-item-->
-        <div class="gallery-item" style="height: 400px;">
-          <!-- <div class="grid-item-holder">
-            <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-              class="
-                                                            fet_pr-carousel-box-media-zoom
-                                                            popup-image
-                                                          "><i class="fal fa-search"></i></a> -->
-          <img src="images/home3.png" alt="" />
-        </div>
-        <div class="gallery-item" style="height: 400px;">
-          <div class="grid-item-holder">
-            <!-- <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-                      class="
-                                                                      fet_pr-carousel-box-media-zoom
-                                                                      popup-image
-                                                                    "><i class="fal fa-search"></i></a> -->
-            <img src="images/home5.png" alt="" />
-          </div>
-        </div>
-        <!-- gallery-item end-->
-        <!-- gallery-item-->
-        <div class="gallery-item" style="height: 400px;">
-          <!-- <div class="grid-item-holder">
-                    <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-                      class="
-                                                                    fet_pr-carousel-box-media-zoom
-                                                                    popup-image
-                                                                  "><i class="fal fa-search"></i></a> -->
-          <img src="images/home6.png" alt="" />
-        </div>
-      </div>
-      <!-- gallery-item end-->
-
-      <!-- portfolio end -->
-      <!-- <h3 class="pr-subtitle mar-top">thi is</h3> -->
-      <p></p>
-    </div>
-    <!-- tab-content end-->
+<div class="row2">
+  <div class="column">
+    <img src="images/home4.png" alt="Snow" style="width:100%">
   </div>
+  <div class="column">
+    <img src="images/home3.png" alt="Forest" style="width:100%">
+  </div>
+</div>
+<div class="row2">
+  <div class="column">
+    <img src="images/home5.png" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="images/home4.png" alt="Forest" style="width:100%;">
+  </div>
+
+</div>
 
 
 
@@ -159,7 +98,7 @@
                       ">
   <!-- gallery-item-->
   <div class="gallery-item " style="padding: 5px">
-    <h2>heis</h2>
+    <h3 style="color: white;">project 1</h3>
     <div class="grid-item-holder">
       <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
         class="
@@ -174,6 +113,8 @@
   <!-- gallery-item end-->
   <!-- gallery-item-->
   <div class="gallery-item" style="padding: 5px">
+    <h3 style="color: white;">project 2</h3>
+
     <div class="grid-item-holder">
       <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
         class="
@@ -188,6 +129,8 @@
   <!-- gallery-item end-->
   <!-- gallery-item-->
   <div class="gallery-item" style="padding: 5px">
+    <h3 style="color: white;">project 3</h3>
+
     <div class="grid-item-holder">
       <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
         class="
@@ -200,6 +143,8 @@
     </div>
   </div>
   <div class="gallery-item">
+    <h3 style="color: white">project 4</h3>
+
     <div class="grid-item-holder">
       <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
         class="
