--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,46 +1,28 @@
 <div class="content">
     <!--fixed-column-wrap-->
-    <div class="fixed-column-wrap">
-        <!--fixed-column-wrap-content-->
-        
-        <div class="fixed-column-wrap-content">
-            <div class="bg" data-bg="images/bg/on-going.jpg"></div>
-          
-            <div class="progress-bar-wrap bot-element">
-                <div class="progress-bar"></div>
-            </div>
-            <!--fixed-column-wrap_title-->
-            <div class="fixed-column-wrap_title first-tile_load">
-                <h2>Our <br> Projects</h2>
-                
-            </div>
-            <!--fixed-column-wrap_title end-->
-            <div class="fixed-column-dec"></div>
-        </div>
-        <!--fixed-column-wrap-content end-->
-    </div>
+   
     <!--fixed-column-wrap end-->
     <!--column-wrap--> 
-    <div class="column-wrap">
+    <div class="column-wrap2">
         <!--column-wrap-container -->   
-        <div class="column-wrap-container fl-wrap dark-bg">
+        <div class="fl-wrap dark-bg">
             <div class="col-wc_dec">
-                <!-- <div class="pr-bg pr-bg-white"></div> -->
+                <div class="pr-bg pr-bg-white"></div>
             </div>
             <div class="col-wc_dec col-wc_dec2">
-                <!-- <div class="pr-bg pr-bg-white"></div> -->
+                <div class="pr-bg pr-bg-white"></div>
             </div>
             <section  class="small-padding article dark-bg">
                 <div class="container">
     
                     <div class="split-sceen-content_title fl-wrap">
-                        <!-- <!-- <div class="pr-bg pr-bg-white"></div> --> -->
+                        <!-- <div class="pr-bg pr-bg-white"></div> -->
                         <h3>
                             Fashion Cyphers</h3>
                     </div>
                     <div class="column-wrap-content fl-wrap">
                         <div class="column-wrap-media fl-wrap">
-                            <!-- <div class="pr-bg pr-bg-white"></div> -->
+                            <div class="pr-bg pr-bg-white"></div>
                             <div class="single-slider-wrap">
                                 <div class="single-slider fl-wrap">
                                     <div class="swiper-container">
@@ -57,7 +39,7 @@
                                    
                                 </div>
                                 <div class="ss-slider-controls">
-                                    <!-- <div class="pr-bg pr-bg-white"></div> -->
+                                    <div class="pr-bg pr-bg-white"></div>
                                     <div class="ss-slider-pagination"></div>
                                     <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                     <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -79,10 +61,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="parallax-header"> <a href="/fashioncyphers">EXPLORE MORE</a> </div>
+                        <div class="parallax-header"> <a href="/fashioncyphers">EXPLORE MORE</a> </div> 
+                        <!-- <div class="parallax-header" style="float: right;"> <a href="/fashioncyphers">DONATE</a> </div> -->
                     </div>
                     <div class="section-number right_sn">
-                        <!-- <div class="pr-bg pr-bg-white"></div> -->
+                        <div class="pr-bg pr-bg-white"></div>
                     </div>
                 </div>
             </section>
@@ -92,13 +75,13 @@
             <section  class="small-padding article dark-bg">
                 <div class="container">
                     <div class="split-sceen-content_title fl-wrap">
-                        <!-- <div class="pr-bg pr-bg-white"></div> -->
+                        <div class="pr-bg pr-bg-white"></div>
                         <h3>KWETU KWANZA</h3>
                        
                     </div>
                     <div class="column-wrap-content fl-wrap">
                         <div class="column-wrap-media fl-wrap">
-                            <!-- <div class="pr-bg pr-bg-white"></div> -->
+                            <div class="pr-bg pr-bg-white"></div>
                             <div class="single-slider-wrap">
                                 <div class="single-slider fl-wrap">
                                     <div class="swiper-container">
@@ -113,7 +96,7 @@
                                     </div>
                                 </div>
                                 <div class="ss-slider-controls">
-                                    <!-- <div class="pr-bg pr-bg-white"></div> -->
+                                    <div class="pr-bg pr-bg-white"></div>
                                     <div class="ss-slider-pagination"></div>
                                     <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                     <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -139,7 +122,7 @@
                         <div class="parallax-header"> <a href="/kwetukwanza">EXPLORE MORE</a> </div>
                     </div>
                     <div class="section-number right_sn">
-                        <!-- <div class="pr-bg pr-bg-white"></div> -->
+                        <div class="pr-bg pr-bg-white"></div>
                     </div>
                 </div>
             </section>
@@ -149,13 +132,13 @@
             <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
-                            <!-- <div class="pr-bg pr-bg-white"></div> -->
+                            <div class="pr-bg pr-bg-white"></div>
                             <h3>Fashion Workshops</h3>
                             
                         </div>
                         <div class="column-wrap-content fl-wrap">
                             <div class="column-wrap-media fl-wrap">
-                                <!-- <div class="pr-bg pr-bg-white"></div> -->
+                                <div class="pr-bg pr-bg-white"></div>
                                 <div class="single-slider-wrap">
                                     <div class="single-slider fl-wrap">
                                         <div class="swiper-container">
@@ -168,7 +151,7 @@
                                         </div>
                                     </div>
                                     <div class="ss-slider-controls">
-                                        <!-- <div class="pr-bg pr-bg-white"></div> -->
+                                        <div class="pr-bg pr-bg-white"></div>
                                         <div class="ss-slider-pagination"></div>
                                         <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                         <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -188,7 +171,7 @@
                             <div class="parallax-header"> <a href="/workshop">EXPLORE MORE</a> </div>
                         </div>
                         <div class="section-number right_sn">
-                            <!-- <div class="pr-bg pr-bg-white"></div> -->
+                            <div class="pr-bg pr-bg-white"></div>
                         </div>
                     </div>
                 </section>
@@ -198,13 +181,13 @@
             <section  class="small-padding article dark-bg">
                     <div class="container">
                         <div class="split-sceen-content_title fl-wrap">
-                            <!-- <div class="pr-bg pr-bg-white"></div> -->
+                            <div class="pr-bg pr-bg-white"></div>
                             <h3>IGC SUSTAINABILITY INNOVATION</h3>
                             
                         </div>
                         <div class="column-wrap-content fl-wrap">
                             <div class="column-wrap-media fl-wrap">
-                                 <!-- <div class="pr-bg pr-bg-white"></div> --> 
+                                <div class="pr-bg pr-bg-white"></div>
                                 <div class="single-slider-wrap">
                                     <div class="single-slider fl-wrap">
                                         <div class="swiper-container">
@@ -217,7 +200,7 @@
                                             
                                 </div>
                                 <div class="ss-slider-controls">
-                                    <!-- <div class="pr-bg pr-bg-white"></div> -->
+                                    <div class="pr-bg pr-bg-white"></div>
                                     <div class="ss-slider-pagination"></div>
                                     <div class="ss-slider-cont ss-slider-cont-prev color-bg"><i class="fal fa-long-arrow-left"></i></div>
                                     <div class="ss-slider-cont ss-slider-cont-next color-bg"><i class="fal fa-long-arrow-right"></i></div>
@@ -241,7 +224,7 @@
                             <div class="parallax-header"> <a href="/mistakenfabrics">EXPLORE MORE</a> </div>
                         </div>
                         <div class="section-number right_sn">
-                            <!-- <div class="pr-bg pr-bg-white"></div> -->
+                            <div class="pr-bg pr-bg-white"></div>
                         </div>
                     </div>
                 </section>
