--- a/public/css/style.css
+++ b/public/css/style.css
@@ -793,6 +793,15 @@ nav.nav-inner {
   background: #fff;
   z-index: 1;
 }
+
+.column-wrap-projects {
+  float: left;
+  width: 100%;
+  position: relative;
+  min-height: 100vh;
+  background: #fff;
+  z-index: 1;
+}
 .column-wrap-container {
   /* padding: 50px 0 20px; */
   padding: 0px 0 0px;
@@ -3278,10 +3287,36 @@ left: 0;
 /* Three columns side by side */
 .column {
   float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
+  width: 50%;
+  margin-bottom: 5px;
+  padding: 0 2px;
+  overflow: hidden;
 }
+
+.column:hover img {
+  opacity: 0.7;
+  -webkit-transform: scale(1.15);
+  transform: scale(1.15);
+ 
+  
+}
+
+.column img{
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 1;
+  background: #292929;
+  -webkit-transition: all 2000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  transition: all 2000ms cubic-bezier(0.19, 1, 0.22, 1) 0ms; 
+}
+
+
+
+
+
 
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 650px) {
@@ -3289,6 +3324,12 @@ left: 0;
     width: 100%;
     display: block;
   }
+}
+
+.row2::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 /* Add some shadows to create a card effect */
